<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:background="@drawable/layout_view"
        android:backgroundTint="@color/Half_ask_back">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/margin">
            <TextView
                android:id="@+id/dialog_title"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Change_Password"
                android:textSize="@dimen/big_textSize"
                android:textColor="@color/colorAccent"/>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Please_enter_your_original_password"
                android:textSize="@dimen/middle_textSize"
                android:textColor="@color/colorPrimaryDark"/>
            <EditText
                android:id="@+id/edt_oldpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/middle_textSize"
                android:inputType="textPassword"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Please_enter_your_new_password"
                android:textSize="@dimen/middle_textSize"
                android:textColor="@color/colorPrimaryDark"/>
            <EditText
                android:id="@+id/edt_newpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/middle_textSize"
                android:inputType="textPassword"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Confirm_new_password"
                android:textSize="@dimen/middle_textSize"
                android:textColor="@color/colorPrimaryDark"/>
            <EditText
                android:id="@+id/edt_checknewpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/middle_textSize"
                android:inputType="textPassword"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/Light_color"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialog_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/white" />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/Light_color"/>
            <TextView
                android:id="@+id/dialog_ok"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ok"
                android:gravity="center"
                android:textColor="@color/white"
                android:textAlignment="center"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>